--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -95,10 +95,10 @@ body{
 .grass
 {
     width: 130%;
+    height: 80%;
     position: absolute;
     z-index: 1000;
-    bottom: -120px;
-    transform: translateY(300px);
+    bottom: -15%;
     filter: brightness(0.5);
     -webkit-filter: brightness(0.5);
    
@@ -106,10 +106,10 @@ body{
 .grass2
 {
     width: 130%;
+    height: 80%;
+    top: 10%;
     position: absolute;
     z-index:-1;
-    bottom: 90px;
-    transform: translateY(300px);
     filter: brightness(0.5);
     -webkit-filter: brightness(0.5);
     
@@ -135,7 +135,7 @@ body{
 
 .night .city
 {
-    width: 130%;
+    width: 150%;
     background: url(../image/city.png);
     height: 1000px;
     margin-top: 100px;
